appId: com.justinleggett.skateboard
name: Mark a trick as in progress
---
- runFlow: login.yaml

- assertVisible: "TRICK LIBRARY"

- tapOn: "Ollie"

- assertVisible: "Ollie"
- tapOn:
    id: "start-learning-button"

- tapOn:
    text: "Learning"

- assertVisible: "IN PROGRESS"
- assertVisible: "Ollie"
