appId: com.justinleggett.skateboard
name: Login flow
---
- launchApp:
    clearState: true

- assertVisible: "WELCOME BACK"

- tapOn:
    id: "email-input"
- inputText: "${EMAIL}"

- tapOn:
    id: "password-input"
- inputText: "${PASSWORD}"

- tapOn:
    id: "sign-in-button"

- assertVisible: "TRICK LIBRARY"
